[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SimulStreaming"
version = "0.1.0"
description = "SimulStreaming"
requires-python = ">=3.8"
dependencies = ["librosa", "tiktoken", "tqdm", "numpy<2"]

[project.scripts]
simulstreaming_whisper = "simulstreaming_whisper:simul_asr_factory"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_streaming*", "simul_whisper*", "token_buffer.py", "simul_whisper/whisper/assets/*"]

[tool.setuptools.package-data]
"simul_whisper.whisper" = ["assets/*"]

[tool.setuptools]
include-package-data = true

#[tool.setuptools.packages.find]
#where = ["."]
#packages = ["whisper_streaming"]  # , "simul_whisper"]
#include = ["simulstreaming_whisper.py"]

[dependency-groups]
gpu = ["torchaudio", "torch"]
